# Algorithms-in-Computer-Algebra

./: CMakeLists.txt  ChineseRemainderAlgorithm.cpp  ChineseRemainderAlgorithm.h  EuclideanAlgorithm.cpp  EuclideanAlgorithm.h  ExtendedEuclideanAlgorithm.cpp  ExtendedEuclideanAlgorithm.h  FastFourierTransform.cpp  FastFourierTransform.h  Interpolation.cpp  Interpolation.h  MultivariatePolynomial.cpp  MultivariatePolynomial.h  Polynomial.cpp  Polynomial.h  README.md  main.cpp
